--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ Flask==0.12.2
 Flask-Cors==3.0.3
 Flask-PyMongo==0.5.1
 gunicorn==19.7.1
-networkx==2.0
-numpy==1.13.3
+`numpy==1.13.3
 numpydoc==0.7.0
-pymongo==3.6.1
 scipy==0.19.1
